syntax = "proto3";

import "filters.proto";
import "types.proto";
import "services_types.proto";

package co.topl.genus.services;

service TransactionsQuery {
  rpc Query (QueryTxsReq) returns (QueryTxsRes);
}

message QueryTxsReq {
  TransactionFilter filter = 1;
  uint32 confirmation_depth = 2;
  Paging paging_options = 3;
}

message QueryTxsRes {
  message Success {
    repeated Transaction transactions = 1;
  }

  message Failure {
    oneof reason {
      string data_store_connection_error = 1;
      string query_timeout = 2;
    }
  }

  oneof result {
    Success success = 1;
    Failure failure = 2;
  }
}
